# workflow-builder

./: .gitignore  CELL_BASED_ARCHITECTURE_SPEC.md  CLAUDE.md  Dockerfile  GUIDED_FEATURES.md  README.md  README_EN.md  docker-compose.yml  index.html  requirements.txt  ruff.toml  workflow_description_traitement_factures.txt
.claude/: run-stop-checks.sh  run-unit-tests.sh  settings.json
.claude/commands/: review-mr.md  test.md
api/: anthropic_client.py  api_clients.py  config.py  index.py  main.py  models.py  paradigm_client.py  paradigm_client_standalone.py  pdf_generator.py
api/clients/: __init__.py  retry.py  (+1 more)
api/workflow/templates/mcp_server/: README.md  README_EN.md  http_server.py  pyproject.toml  server.py
docs/: ANALYSE_GENERATOR.md  ANALYSE_GENERATOR_EN.md  HANDOVER.md  PASSATION.md  n8n-implementation-guide.md  paradigm-n8n-complete-conversation.md  paradigm-n8n-data-ownership.md  paradigm-n8n-deployment-models.md  paradigm-n8n-enterprise-integration.md  workflow-builder-schema.html
tests/: README_EN.md  TEST-REPORT.md  conftest.py  simple_paradigm_test.py  test_cell_based.py  test_enhancer_validation.py  test_extraction_demo.py  test_files_api.py  test_integration.py  test_paradigm_api.py  test_security.py  test_smoke_frontend.py  test_unit_cell_generator.py  test_unit_config.py  test_unit_models.py  test_unit_paradigm_extract.py  test_unit_prompt_loader.py  test_unit_retry.py  test_workflow_api.py
workflow_descriptions/: workflow_description_analyse_cv.md  workflow_description_traitement_factures_simple.txt  workflow_ugap_description_v5_LN.txt
(+58 files in other folders)
